@@ -19,6 +19,7 @@
     * Work around print head returning to the print after Stop print
     * Added endpoint for download file from url
     * Password in plain text form is not stored in memory
+    * Added endpoint for gettting info about the file currently being downloaded
 
 0.4.0 (2021-04-13)
     * getting IP refactoring
